# OS

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_SPEC.md  AI_RUNTIME.md  APPROVAL_MODEL.md  ARCHITECTURE.md  BRO_ORCHESTRATOR.md  CHANGELOG.md  CLAUDE.md  COMMAND_ENGINE.md  CONTEXT_ENGINE.md  DECISIONS.md  DECISION_ENGINE.md  DECISION_RECORDS.md  DESIGN_SYSTEM.md  EVENT_SYSTEM.md  FOUNDATION_REVIEW.md  GROUP_CHAT_SPEC.md  KNOWLEDGE_ENGINE.md  LAWS.md  LOCALIZATION_AND_THEMES.md  MASTER_EXECUTION_ROADMAP.md  MEMORY_ENGINE.md  MISSION.md  MULTI_AGENT_RUNTIME.md  NAVIGATION.md  NEXT_CHAT.md  OWNERS.md  PERSONAS.md  PRINCIPLES.md  PRODUCT_SCOPE.md  PROJECT_CONTEXT.md  PROJECT_STATE.md  README.md  ROADMAP.md  SCREEN_INVENTORY.md  SEARCH_AND_COMMAND_PALETTE.md  SECURITY.md  START_HERE.md  (+10 more)
.bro/: policy.json
.claude/: settings.json
.github/: pull_request_template.md
AUDIT/: BroPS_Audit_Report.md
agents/: README.md  authority-policy.json  registry.json  ui-policy.json
analytics/: dashboards.json
apps/desktop/src-tauri/: Cargo.toml  README.md  build.rs  command-policy.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/core/: Cargo.toml
apps/desktop/src-tauri/core/schema/: 0001_initial.sql  0002_decisions.sql  0004_knowledge_memory.sql  0006_run_steps.sql  0010_search_fts.sql  0011_constraints.sql  0012_approval_provenance.sql  0012_message_receipt.sql  0013_step_execution_claim.sql  0014_receipt_verification.sql
apps/desktop/src-tauri/core/src/: db.rs  domain.rs  lib.rs  receipt.rs  receipt_store.rs  repo.rs
apps/desktop/src-tauri/permissions/autogenerated/: add_run_step.toml  add_task_dependency.toml  advance_run.toml  ai_status.toml  confirm_approval.toml  create_automation.toml  create_conversation.toml  create_decision.toml  create_event.toml  create_knowledge.toml  create_memory.toml  create_project.toml  create_run.toml  create_task.toml  decide_approval.toml  delete_automation.toml  delete_conversation.toml  delete_event.toml  delete_knowledge.toml  delete_memory.toml  get_analytics.toml  get_security_summary.toml  list_activity.toml  list_agents.toml  list_approvals.toml  list_automations.toml  list_conversations.toml  list_decisions.toml  list_dir.toml  list_events.toml  list_integrations.toml  list_knowledge.toml  list_memory.toml  list_messages.toml  list_notifications.toml  list_projects.toml  list_run_steps.toml  list_runs.toml  list_task_dependencies.toml  list_tasks.toml  (+24 more)
apps/desktop/src-tauri/src/: ai.rs  commands.rs  files.rs  lib.rs  main.rs
bridge/: DESIGN.md  README.md  engine_adapter.py  engine_sidecar.py
config/: canonical-read-manifest.json  documentation-manifest.json  protected-control-plane.json  runtime-dependencies.json  sst-registry.json  trusted-keys.json
contracts/: README.md
docs/: ANALYTICS_CONTROL_PLANE.md  ARCHITECTURE.md  CONTROL_ROOM_API_V1_SPEC.md  DESIGN_SYSTEM.md  EXECUTION_CONTROL_PLANE_V2_SPEC.md  GIT_RELEASE_CONTROL.md  IMPLEMENTATION_EXECUTION_HANDOFF.md  OPERATING_MODES.md  OPERATOR_RUNBOOK.md  ORCHESTRATION_CONTROL_ROOM_V1_SPEC.md  ORCHESTRATION_RUNTIME_V1_SPEC.md  PROJECT_CONTEXT.md  REPOSITORY_LAYOUT.md  ROADMAP.md  SECURITY_MODEL.md  TEAM_PROTOCOL.md
engine/: .gitignore  README.md  ROADMAP.md
laws/: LAW_INDEX.md  registry.json
packs/: README.md  analytics-registry.json  mandatory-roles.json  registry.json
product/: AGENT_FLOWS.md  CHAT_FLOWS.md  DECISION_APPROVAL_FLOWS.md  GROUP_CHAT.md  INFORMATION_ARCHITECTURE.md  NAVIGATION.md  PROJECT_TASK_FLOWS.md  SCREEN_INVENTORY.md  SEARCH_AND_COMMAND_PALETTE.md  STATES.md  USER_FLOWS.md  WORKSPACES.md  WORKSPACE_FLOWS.md
release/: registry.json
runtime/: bro_analytics.py  bro_audit_log.py  bro_authority.py  bro_authorization.py  bro_completion.py  bro_contracts.py  bro_control_plane.py  bro_control_room_api.py  bro_env_health.py  bro_evidence.py  bro_execution_lease.py  bro_hook.py  bro_identity.py  bro_identity_hook.py  bro_learning.py  bro_orchestration.py  bro_orchestration_runtime.py  bro_orchestration_runtime_v1.py  bro_policy.py  bro_protected.py  bro_receipt.py  bro_recovery.py  bro_release_v3.py  bro_repository_state.py  bro_secrets.py  bro_security.py  bro_signature.py  bro_skill_evolution.py  bro_stop_controller.py  bro_workspace.py
schemas/: agent-profile.schema.json  agent-ui.schema.json  completion-manifest.schema.json  control-room-command.schema.json  evidence-event.schema.json  execution-lease.schema.json  law-record.schema.json  meta-layer.schema.json  metric-contract.schema.json  mode-grant.schema.json  orchestration-event.schema.json  recovery-record.schema.json  registry.json  release-grant.schema.json  runtime-dependency.schema.json  skill-receipt.schema.json  task-contract.schema.json  verifier-receipt.schema.json
skills/: README.md  evolution-policy.json  index.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/schema/: 0003_conversations.sql  0005_operations.sql  0007_run_step_result.sql  0008_approval_gating.sql  0009_task_dependencies.sql
src-tauri/core/src/: db.rs  domain.rs  lib.rs  repo.rs
src-tauri/src/: ai.rs  commands.rs  files.rs  lib.rs
tests/: _operator_pin.py  catalog.json  test_monitor.py  (+38 more)
(+297 files in other folders)
