[package]
name = "brops-core"
version = "0.1.0"
edition = "2021"
description = "BroPS local data core: SQLite schema, migrations, and repositories."

[lib]
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
# T-011: SHA-256 for the canonical request-envelope digest that binds an approval
# decision to the exact request it was raised for.
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
