[package]
name = "brops-core"
version = "0.1.0"
edition = "2021"
description = "BroPS local data core: SQLite schema, migrations, and repositories."

[lib]
path = "src/lib.rs"

[dependencies]
# `hooks` exposes the commit-hook binding used ONLY by a #[cfg(test)] test that
# deterministically forces a COMMIT failure to prove the atomic transaction rolls
# back explicitly (Wave 3a slice 2 audit). No new crates; verify-path unaffected.
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
# T-011: SHA-256 for the canonical request-envelope digest that binds an approval
# decision to the exact request it was raised for.
sha2 = "0.10"
# Wave 3a (Receipt Protocol v1): Ed25519 receipt verification (desktop = final
# authority) + base64url wire decoding. `ed25519-dalek` is used VERIFY-ONLY in
# production code — the signing half lives only behind `#[cfg(test)]`, so the
# desktop core is never a `sign(arbitrary_bytes)` oracle (design §1).
ed25519-dalek = "2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
